--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   app_links: ^6.4.1
   get: ^4.6.6
-  ffmpeg_kit_flutter_new: ^4.1.0
+
   flutter_hls_parser: ^2.0.1
   gallery_saver_plus: ^3.0.1
   image_gallery_saver: ^2.0.2
@@ -78,6 +78,7 @@ flutter:
     - assets/demo.html
     - assets/navigation_test.html
     - assets/sdk_package.json
+    - assets/appbridge.js
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/to/asset-from-package
