--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,10 +23,25 @@ dependencies:
 
   flutter_inappwebview: ^6.1.5
   flutter_downloader: ^1.12.0
+  image_picker: ^1.2.0
+  flutter_local_notifications: ^19.0.0
+  share_plus: ^12.0.1
+  battery_plus: ^7.0.0
+  fluttertoast: ^9.0.0
+  get: ^4.6.6
+  flutter_hls_parser: ^2.0.1
+  gallery_saver_plus: ^3.0.1
+  image_gallery_saver: ^2.0.2
+  in_app_update: ^4.2.0
+  video_player: ^2.8.6
+  cached_network_image: ^3.0.0
+  screen_brightness: ^2.1.7
+  volume_controller: ^3.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  quick_actions: ^1.0.0 # Add quick_actions as a dependency
 
 dev_dependencies:
   integration_test:
@@ -41,8 +56,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+
 
 # The following section is specific to Flutter packages.
 flutter:
