--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_local_notifications: ^19.0.0
   in_app_update: ^4.2.0
   flutter_downloader: ^1.12.0
+  ffmpeg_kit_flutter_new: ^4.1.0
+#  flutter_livepush_plugin: ^7.0.0
   image_picker: ^1.2.0
   fluttertoast: ^9.0.0
   share_plus: ^12.0.1
