--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,7 +6,7 @@ version: 1.1.0
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ^3.8.1
+  sdk: ^3.3.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -21,9 +21,9 @@ dependencies:
   appbridge:
     path: ../
 
-  flutter_inappwebview: ^6.1.5
-  flutter_downloader: ^1.12.0
-  image_picker: ^1.2.0
+  flutter_inappwebview: any
+  flutter_downloader: ^1.11.8
+  image_picker: ^1.1.0
   flutter_local_notifications: ^19.0.0
   share_plus: ^12.0.1
   battery_plus: ^7.0.0
@@ -35,7 +35,7 @@ dependencies:
   in_app_update: ^4.2.0
   video_player: ^2.8.6
   cached_network_image: ^3.0.0
-  screen_brightness: ^2.1.7
+  screen_brightness: any
   volume_controller: ^3.4.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^4.0.0
 
 
 
